tests/ui/parser/if-in-in.stderr
error: expected iterable, found keyword `in`
  --> $DIR/if-in-in.rs:4:14
   |
LL |     for i in in 1..2 {
   |              ^^
   |
help: remove the duplicated `in`
   |
LL -     for i in in 1..2 {
LL +     for i in 1..2 {
   |

error: aborting due to 1 previous error

